flex/flex-tests/testData/js2_highlighting/IncompatibleOverrideFix6.js2
package {
import flash.events.EventDispatcher;
class <error>FooBase</error> {
    function foo(p: EventDispatcher):void {}
}
}

package {
class Foo extends FooBase {
    override function foo<error descr="Incompatible override, should have signature '(p: EventDispatcher)'">()</error>:void {
    }
}
}
